FEAT commit semi final

--- a/Projeto/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/Projeto/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -23,7 +23,8 @@
 			<p>
 				<h:form>
 					<h:panelGrid columns="2">
-						<h:commandButton value="Logout" action="#{loginController.logout}" />
+						<h:commandButton value="Logout" action="#{loginController.logout}"
+							style="height: 40px; width: 70px; border: 2px solid #38B6FF; border-radius: 10px; background-color: #FFFFFF;" />
 					</h:panelGrid>
 				</h:form>
 			</p>
